@@ -78,11 +78,18 @@ class ContentViewArticle extends JView
 
 		// If not checked out, can save the item.
 		if (!$checkedOut) {
-			JToolBarHelper::custom('article.save2new', 'new.png', 'new_f2.png', 'JToolbar_Save_and_new', false);
+
 			JToolBarHelper::save('article.save');
 			JToolBarHelper::apply('article.apply');
+			JToolBarHelper::custom('article.save2new', 'new.png', 'new_f2.png', 'JToolbar_Save_and_new', false);			
 		}
-		JToolBarHelper::cancel('article.cancel');
+		if (empty($this->item->id))  {
+			JToolBarHelper::cancel('article.cancel');
+		}
+		else {
+			JToolBarHelper::cancel('article.cancel', 'JToolbar_Close');
+		}
+		
 		JToolBarHelper::divider();
 		JToolBarHelper::help('screen.content.article');
 	}
