@@ -52,6 +52,7 @@ class TemplatesViewTemplates extends JView
 
 		JToolBarHelper::editList('edit', 'Edit');
 		//JToolBarHelper::addNew();
+		JToolBarHelper::divider();		
 		JToolBarHelper::help('screen.templates');
 
 		//$select[] 			= JHtml::_('select.option', '0', JText::_('Site'));
