@@ -65,11 +65,15 @@ class UsersViewUser extends JView
 	{
 		$isNew	= ($this->item->id == 0);
 		JToolBarHelper::title(JText::_($isNew ? 'Users_View_New_User_Title' : 'Users_View_Edit_User_Title'), 'user');
-
-		JToolBarHelper::addNew('user.save2new', 'JToolbar_Save_and_new');
 		JToolBarHelper::save('user.save');
-		JToolBarHelper::apply('user.apply');
-		JToolBarHelper::cancel('user.cancel');
+		JToolBarHelper::apply('user.apply');		
+		JToolBarHelper::addNew('user.save2new', 'JToolbar_Save_and_new');
+		if (empty($this->item->id))  {
+			JToolBarHelper::cancel('user.cancel');
+		}
+		else {
+			JToolBarHelper::cancel('user.cancel', 'JToolbar_Close');
+		}
 		JToolBarHelper::divider();
 		JToolBarHelper::help('screen.users.user');
 	}
